[b]Version 0.5.62[/b] (not released yet):

(2007-10-21)
 * Now the aspect ratio settings should work when using the mplayer own window.

(2007-10-19)
 * Updated the Polish translation.
 * Improved layout of section "Preferred audio & subtitles" in 
   Preferences->General.

(2007-10-18)
 * (Internal change) Don't use the pref object in mplayerwindow.
 * Now the first track number for initial_subtitle_track and 
   initial_audio_track (in config) is 1, instead of 0, to make it more natural.
 * Added in Preferences->General options to choose the initial audio &
   subtitle tracks.

(2007-10-17)
 * Added a 2nd patch by LoRd_MuldeR for winfileassoc.cpp.
 * Added a work-around for a problem which prevents to use the arrow keys
   for shortcuts when using Simplified-Chinese.

(2007-10-15)
 * Added clean_windows.bat, which deletes the compilation files.
 * Now the settings for played files will be saved in an independent file:
   ~/.smplayer/smplayer_files.ini (or under the directory set in -ini-path).

(2007-10-14)
 * Added patch by LoRd_MuldeR for prefassociations.cpp and winfileassoc.cpp to
   make the file associations code compatible with SetFileAssoc.exe. It also
   adds an "Enqueue in SMPlayer" for the context menu. Not tested yet.
 * Disable compact mode when the video window is hidden (playing an audio
   file or using the mplayer window). I think this fixes bug #1812952.
 * New option for the config file: allow_video_movement. If true the video
   can be moved (Alt+cursors) even if not using zoom.

(2007-10-13)
 * Updated the Ukrainian translation.

(2007-10-10)
 * Updated the Slovak translation.


[b]Version 0.5.61[/b]:

(2007-10-08)
 * Updated the Polish translation.
 * Added new icon (pref_associations.png).
 * Not compiling prefassociations and winfileassoc in linux, as they won't be
   used, to save some bytes and some secs of compilation.
 * Added *.ape to the list of audio files.

(2007-10-07)